homepage working - defaultlayout issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -66,27 +66,14 @@ button{
 .car{
   border-radius: 5px;
   margin-top: 100px;
-  height: 160px;
-  transition: 0.3s;
 }
-.car:hover{
-  height: 220px;
-}
-.car-hover > .car-content{
-  opacity: 1;
-  transform: translateY(-40px);
-}
+
 .carimg{
   height: 150px;
   width: auto;
   border-radius: 5px;
-  transform: translateY(-50px);
 }
-.car-content{
-  transform: translateY(-200px);
-  opacity: 0;
-  transition: 0.3s;
-}
+
 
 .login{
   background-color: black;
